# workgraph

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  SPEC.md  pyproject.toml
.workgraph/: graph.yaml
src/workgraph/: __init__.py  cli.py  errors.py  gate.py  graph.py  lifecycle.py  mcp_server.py  models.py  render.py  service.py  store.py
tests/: test_cli.py  test_dep_removal.py  test_e2e.py  test_gate.py  test_graph.py  test_lifecycle.py  test_live_mcp.py  test_mcp.py  test_nudge.py  test_provenance.py  test_render.py  test_service.py  test_store.py
