[project]
name = "workgraph"
version = "0.1.0"
description = "A coordinator's deterministic work-unit graph: declare nodes with deps, get topo waves, gate completion on a command + human sign-off, query status. CLI + MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
workgraph = "workgraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workgraph"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
